# AndroidDAW_SDK

./: .gitmodules  README.md  build.gradle
CMAKE_HELPER/: CMakeLists.txt
JNI_CPP_API/: build.gradle
JNI_CPP_API/src/androidTest/java/smallville7123/AndroidDAW/SDK/jni_cpp_api/: ExampleInstrumentedTest.java
JNI_CPP_API/src/main/: AndroidManifest.xml
JNI_CPP_API/src/main/cpp/: CMakeLists.txt
JNI_CPP_API/src/main/cpp/src/: cpp_api.cpp
JNI_CPP_API/src/main/java/smallville7123/AndroidDAW/SDK/jni_cpp_api/: JNI_CPP_API.java
JNI_CPP_API/src/test/java/smallville7123/AndroidDAW/SDK/jni_cpp_api/: ExampleUnitTest.java
JniHelpers/: build.gradle
JniHelpers/src/androidTest/java/smallville7123/AndroidDAW/SDK/JniHelpers/: ExampleInstrumentedTest.java
JniHelpers/src/main/: AndroidManifest.xml
JniHelpers/src/main/cpp/: CMakeLists.txt
JniHelpers/src/main/cpp/include/AndroidDAW_SDK/JniHelpers/: JniHelpers.h
JniHelpers/src/main/cpp/src/: JniHelpers.cpp
JniHelpers/src/test/java/smallville7123/AndroidDAW/SDK/JniHelpers/: ExampleUnitTest.java
Log/: build.gradle
Log/src/androidTest/java/smallville7123/AndroidDAW/SDK/log/: ExampleInstrumentedTest.java
Log/src/main/: AndroidManifest.xml
Log/src/test/java/smallville7123/AndroidDAW/SDK/log/: ExampleUnitTest.java
Midi/src/androidTest/java/smallville7123/AndroidDAW/SDK/Midi/: ExampleInstrumentedTest.java
Midi/src/main/: AndroidManifest.xml
Midi/src/main/cpp/: CMakeLists.txt
Midi/src/test/java/smallville7123/AndroidDAW/SDK/Midi/: ExampleUnitTest.java
Plugin/: build.gradle
Plugin/src/androidTest/java/smallville7123/AndroidDAW/SDK/plugin/: ExampleInstrumentedTest.java
Plugin/src/main/: AndroidManifest.xml
Plugin/src/main/cpp/: CMakeLists.txt
Plugin/src/test/java/smallville7123/AndroidDAW/SDK/plugin/: ExampleUnitTest.java
RingBuffer/src/androidTest/java/smallville7123/AndroidDAW/SDK/RingBuffer/: ExampleInstrumentedTest.java
RingBuffer/src/main/: AndroidManifest.xml
RingBuffer/src/test/java/smallville7123/AndroidDAW/SDK/RingBuffer/: ExampleUnitTest.java
UI/: build.gradle
UI/src/androidTest/java/smallville7123/AndroidDAW/SDK/UI/: ExampleInstrumentedTest.java
UI/src/main/: AndroidManifest.xml
UI/src/main/java/smallville7123/AndroidDAW/SDK/UI/: ExpandableView.java  FileView.java  FocusAutoCompleteTextView.java  GridView.java  GridViewAdapter.java  ImageProgressBar.java  LayoutEngine.java  LayoutUtils.java  PACET.java  PreviewEditText.java  SLACASET.java  SLASET.java  SingleLineAutoSizeTextView.java  SpinnerView.java  StringTokenizer.java  TextViewPreviewUtils.java  TextViewResizeUtils.java  TwoWayNestedScrollView.java  UpdatingImageProgressBar.java  UpdatingTextView.java  WindowsContextMenu.java  WindowsContextMenuAdapter.java  WindowsContextMenuItem.java
UI/src/main/java/smallville7123/AndroidDAW/SDK/UI/Flexible/: Flexible.java
UI/src/main/res/layout/: fileview_content.xml  fileview_row.xml
UI/src/main/res/values/: attrs_file_view.xml  attrs_text.xml  strings.xml
UI/src/test/java/smallville7123/AndroidDAW/SDK/UI/: ExampleUnitTest.java
VstSystem/: build.gradle
VstSystem/VstCore/: build.gradle
VstSystem/VstManager/: build.gradle
src/androidTest/java/smallville7123/AndroidDAW/SDK/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/test/java/smallville7123/AndroidDAW/SDK/: ExampleUnitTest.java
